feat: update token access and varydate